fix: alignment paragraphs

--- a/tbb/src/styles/Home.module.css
+++ b/tbb/src/styles/Home.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 0;
+    padding: 0 18px;
     min-height: 100vh;
     width: 100vw;
 }
