--- a/tbb/src/styles/globals.css
+++ b/tbb/src/styles/globals.css
@@ -40,13 +40,23 @@ body::-webkit-scrollbar {
     align-self: center;
 }
 .copy-help {
-    text-align: justify;
+    text-align: center;
     /* max-width: 744px; */
-    min-width: 315px;
 }
-.copy-help article {
+
+.copy-help .article-help {
+    max-width: 550px;
+    text-align: center;
+    font-size: 16px;
+    min-width: 392px;
+}
+.copy-help .article-whatever {
     max-width: 744px;
-    padding: 0 18px;
+    text-align: center;
+}
+article {
+    text-align: center;
+    /* padding: 0 16px; */
 }
 h3 {
     padding: 0;
@@ -60,10 +70,12 @@ h3 {
     margin: 32px 0 40px 0;
 }
 p {
-    text-align: center;
-    font: normal normal normal 20px Trebuchet MS;
-    letter-spacing: 0.4px;
+    padding-bottom: 16px;
+    text-indent: 4px;
+    width: 100%;
+    line-height: 1.8;
     color: #7b7070;
+    font-size: 16px;
 }
 
 .banner-products {
@@ -90,6 +102,7 @@ footer {
     gap: 61px;
     align-items: center;
     cursor: pointer;
+    margin-top: 120px;
 }
 
 footer ul li {
@@ -118,6 +131,8 @@ footer .social img {
     flex-direction: row;
     align-items: center;
     text-align: center;
+    gap: 24px;
+    padding-left: 10px;
 }
 
 .horizontal-divider {
@@ -217,6 +232,9 @@ footer .social img {
 }
 
 @media (min-width: 1200px) {
+    p {
+        font: normal normal normal 20px/28px Trebuchet MS;
+    }
     .list-cards {
         justify-content: center;
     }
